<resources>
    <string name="app_name">Hitos-proyecto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar">Registrar</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="ingresa_tu_correo_electronico">Ingresa tu correo electronico</string>
    <string name="contrase_a">Contraseña</string>

    <string name="olvidaste_tu_contrasena">¿Olvidaste tu contraseña?</string>
    <string name="ingresar_tu_contrasena">Ingresar tu contraseña</string>
    <string name="nombre_y_apellido">Nombre y Apellido</string>
    <string name="ingresa_tu_nombre_y_apellido">Ingresa tu nombre y apellido</string>
    <string name="rut">RUT</string>
    <string name="ingresa_tu_rut">Ingresa tu RUT</string>
    <string name="confirmar_contrasena">Confirmar Contraseña</string>
    <string name="volver">Volver</string>
    <string name="direccion">Dirección</string>
    <string name="ingresar_direccion">Ingresar Dirección</string>
    <string name="cd_foto_producto">cd foto producto</string>
    <string name="agregar">Agregar</string>

</resources>