<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBE0CD">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp25"
        android:layout_marginEnd="@dimen/dp25"
        android:layout_marginBottom="@dimen/dp25"
        android:orientation="vertical"
        tools:context=".registro.ui.RegisterFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp150"
            android:src="@mipmap/ic_popokicolor" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp25"
            android:text="@string/nombre_y_apellido"
            android:textColor="#757575"
            android:textSize="@dimen/sp18"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:hint="@string/ingresa_tu_nombre_y_apellido"
            android:inputType="text" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_rut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:text="@string/rut"
            android:textColor="#757575"
            android:textSize="@dimen/sp18"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_rut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:hint="@string/ingresa_tu_rut"
            android:inputType="text" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:text="@string/correo_electronico"
            android:textColor="#757575"
            android:textSize="@dimen/sp18"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:hint="@string/ingresa_tu_correo_electronico"
            android:inputType="textEmailAddress" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_contrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:text="@string/contrase_a"
            android:textColor="#757575"
            android:textSize="@dimen/sp18"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_contrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:hint="@string/ingresar_tu_contrasena"
            android:inputType="textPassword" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_confirmar_contrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:text="@string/confirmar_contrasena"
            android:textColor="#757575"
            android:textSize="@dimen/sp18"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_confirmar_contrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:hint="@string/ingresar_tu_contrasena"
            android:inputType="textPassword" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_direccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:text="@string/direccion"
            android:textColor="#757575"
            android:textSize="@dimen/sp18"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:hint="@string/ingresar_direccion"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_volver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp10"
                android:layout_weight="1"
                android:background="@drawable/registroblanco"
                android:text="@string/volver"
                android:textColor="@drawable/txt_btn_dos" />

            <Space
                android:layout_width="@dimen/dp10"
                android:layout_height="match_parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_registrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp10"
                android:layout_weight="1"
                android:background="@drawable/bg_ripple2"
                android:text="@string/registrar"
                android:textColor="@drawable/txt_btn_uno" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>