<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.ui.LoginFragment"
    android:layout_marginStart="@dimen/dp25"
    android:layout_marginEnd="@dimen/dp25"
   >

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp150"
        android:src="@mipmap/ic_popokicolor"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correo_electronico"
        android:textSize="@dimen/sp18"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp10">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/dp30"
            android:layout_marginTop="@dimen/dp15"
            android:layout_height="@dimen/dp30"
            android:src="@drawable/ic_usuario"
            />
        <Space
            android:layout_width="@dimen/dp10"
            android:layout_height="match_parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp10"
        android:hint="@string/ingresa_tu_correo_electronico"
        android:inputType="textEmailAddress" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_contrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp10"
        android:text="@string/contrase_a"
        android:textSize="@dimen/sp18"
        android:textStyle="bold" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="@dimen/dp10">
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/dp30"
        android:layout_height="@dimen/dp30"
        android:layout_marginTop="@dimen/dp10"
        android:src="@drawable/ic_candado"
        />
    <Space
        android:layout_width="@dimen/dp10"
        android:layout_height="match_parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_contrasena"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/ingresar_tu_contrasena"
        android:inputType="textPassword" />
</LinearLayout>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/olvidar_contrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:text="@string/olvidaste_tu_contrasena"
        android:textColor="@color/colorpopoki"
        android:textSize="@dimen/sp12"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ingresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp25"
        android:background="@drawable/btn_dos"
        android:textColor="@drawable/txt_btn_dos"
        android:text="@string/ingresar" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp10"
        android:background="@drawable/btn_uno"
        android:textColor="@drawable/txt_btn_uno"
        android:text="@string/registrar" />


</LinearLayout>